# sunxi-tools

./: .drone.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.FEL.md  README.md  a10-meminfo.c  adb-devprobe.sh  appveyor.yml  autogen.sh  autoversion.sh  bare-metal.c  bare-metal.h  bare-metal.lds  bin2fex.c  bin2fex.h  boot_head.S  boot_head.lds  bootinfo.c  common.h  config.h.in  configure  configure.ac  fel-boot.c  fel-gpio  fel-loop.S  fel-pio.c  fel-pio.lds  fel-remotefunc-compiler.rb  fel-remotefunc-spi-data-transfer.c  fel-remotefunc-spi-data-transfer.h  fel-sdboot.S  fel-sdboot.c  fel-sdboot.lds  (+90 more)
.appveyor/: install-libusb.cmd  package-artifacts.cmd
.github/workflows/: build_check.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
awusb/: Makefile  README  awusb.c
baremetal/: baremetal.env  baremetal.rules
baremetal/boot_head/: Makefile
baremetal/fel-copy/: Makefile  fel-copy.c
baremetal/fel-pio/: Makefile
baremetal/fel-sdboot/: Makefile
baremetal/jtag-loop/: Makefile  jtag-loop.c
binaries/: Makefile.am  fel-pio.nm  fel-sdboot.sunxi
binnaries/: ramboot.scr
felboot/: Makefile  README.txt  common.h  cpu.h  early_print.c  early_print.h  fel-boot.ld  io.h  main.c  printf-stdarg.c  u-boot.sh  usb-boot.sh  util_printf.c
include/: list.h  portable_endian.h
include/libfex/: script_fex.h  script_uboot.h
lib/: Makefile
lib/libfex/: Makefile  script_bin.c  script_fex.c
libfex/: Makefile.am  script.c  script_bin.c  script_uboot.c
man/: Makefile.am  sunxi-tools.7
scripts/: Makefile.am  usb-boot
src/: Makefile.am  boot_head.lds  fel-gpio  fel-sdboot.lds  jtag-loop.lds
sunxi-tools/: .autotools  .cproject  .project  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
sunxi-tools/autom4te.cache/: output.2  output.3  output.4  requests  traces.0  traces.2  traces.3  traces.4
sunxi-tools/include/: copyright.h  endian_compat.h  types.h
sunxi-tools/m4/: ChangeLog
sunxi-tools/old/: i18n.c  i18n.h
sunxi-tools/po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  fr.gmo  fr.po  sunxi-tools.pot
sunxi-tools/src/: Makefile  Makefile.am  Makefile.in  common.c  common.h  fexc.c  fexc.h  script.c  script.h  script_bin.c  script_bin.h  script_fex.c  script_fex.h  script_uboot.c  script_uboot.h  sunxi-tools.c
tests/: Makefile  fextest.sh  test_all_fex.sh  test_bin2fex_corner_cases.sh  test_fex2bin_corner_cases.sh  unify-fex.c
tests/patches/: a-star_kv49l.patch  temp_fex_fixes.patch
thunks/: Makefile  README.md  clrsetbits.S  clrsetbits.h  fel-rx-dma-thunk.S  fel-rx-dma-thunk.h  fel-to-secure-svc-smc-thunk.S  fel-to-secure-svc-smc-thunk.h  fel-to-spl-thunk-armv5.S  fel-to-spl-thunk-armv5.h  fel-to-spl-thunk.S  fel-to-spl-thunk.h  memcpy.S  memcpy.h  objdump_to_h.awk  readl_writel.S  readl_writel.h  rmr-thunk.S  rmr-thunk.h  sid_read_root.S  sid_read_root.h  sid_write.S  sid_write.h
tools/: Makefile  Makefile.am  bootinfo.c  fel.c  fexc.c  fexc.h  nand-part-a10.h  phoenix_info.c  pio.c  tools.env  tools.rules
tools/bootinfo/: Makefile  bootinfo.c
tools/fel/: Makefile
tools/fexc/: Makefile  script_uboot.c
tools/fexc/include/: fexc.h
tools/include/: common.h  endian_compat.h  types.h
tools/meminfo/: Makefile  meminfo.c
tools/nand-part/: nand-common.h
tools/nand_part/: Makefile  nand-part-main.c
tools/phoenix_info/: Makefile
tools/pio/: Makefile  pio.c
