
EXTRA_DIST = fel-pio.bin      \
             fel-pio.nm       \
             fel-sdboot.sunxi \
             jtag-loop.sunxi  \
             ramboot.scr      \
             ramboot.uboot-sh

binariesdir      = $(datadir)/doc/@PACKAGE@-@VERSION@/binaries
binaries_SCRIPTS = fel-pio.bin      \
                   ramboot.uboot-sh

extradir   = $(datadir)/doc/@PACKAGE@-@VERSION@/binaries
extra_DATA = fel-pio.nm       \
             fel-sdboot.sunxi \
             jtag-loop.sunxi  \
             ramboot.scr
